BusOne/src/objects/Message_vod__c.object
<CustomObject>
    <description>Contains Labels and Messages for the Veeva application</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active messages are retrieved by VoD.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_vod__c</fullName>
        <description>Denotes a grouping of messages in the catalog.</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of VoD Message</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>Used by Verticals onDemand to add/change message text during an upgrade.  Never change the values of the external ID fields.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>The message catalog provides a way to store messages for different languages.  The language values should mimic what Salesforce provides in their APIs.  The first two characters are an ISO language code and could be followed by an underscore and an ISO country code (e.g., en_US).</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_vod__c</fullName>
        <description>The text of the message or label.</description>
        <label>Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The Type field for Veeva Message indicates the type of Veeva Message being stored.  Label_vod indicates the message is used to control the display of a label in the application.  Config_vod indicates that the message controls a configuration setting.  Veeva_vod indicates that the message should not be modified by a Customer.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Label_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Config_vod</fullName>
                </value>
                <value>
                    <fullName>Veeva_vod</fullName>
                </value>
                <value>
                    <fullName>Custom_Setting_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Veeva Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type_vod__c</columns>
        <columns>Category_vod__c</columns>
        <columns>NAME</columns>
        <columns>Text_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>External_ID_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>1. All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Network</fullName>
        <columns>Type_vod__c</columns>
        <columns>Category_vod__c</columns>
        <columns>NAME</columns>
        <columns>Text_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>External_ID_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_vod__c</field>
            <operation>equals</operation>
            <value>Network</value>
        </filters>
        <label>2. Network</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veeva Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>